--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -243,14 +243,14 @@
         <h1 class="r d1">API docs that developers <em>actually enjoy</em></h1>
         <p class="hero__sub r d2">Turn any OpenAPI spec into a clean, interactive developer portal. One Web Component — zero config, any framework.</p>
         <div class="hero__acts r d3">
-          <a href="#start" class="btn btn--p">Get Started <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"/><polyline points="12 5 19 12 12 19"/></svg></a>
+          <a href="/demo/" class="btn btn--p">Open Live Demo <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"/><polyline points="12 5 19 12 12 19"/></svg></a>
           <a href="https://github.com/esurkov1/puredocs" target="_blank" rel="noopener" class="btn btn--g"><svg viewBox="0 0 16 16" fill="currentColor"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0016 8c0-4.42-3.58-8-8-8z"/></svg>GitHub</a>
         </div>
       </div>
       <div class="hero__vis r d2">
         <div class="hero__browser">
           <div class="bbar"><span class="bdot bd-r"></span><span class="bdot bd-y"></span><span class="bdot bd-g"></span><span class="burl">puredocs.dev</span></div>
-          <img src="demo/img/screen1.png" alt="PureDocs Try It console" width="1920" height="1080">
+          <img src="./assets/img/screen1.png" alt="PureDocs Try It console" width="1920" height="1080">
         </div>
         <!-- Floating terminal -->
         <div class="hero__fl hero__fl--term">
@@ -297,11 +297,11 @@
     <div class="prev__grid">
       <div class="hero__browser r d2">
         <div class="bbar"><span class="bdot bd-r"></span><span class="bdot bd-y"></span><span class="bdot bd-g"></span><span class="burl">Overview</span></div>
-        <img src="demo/img/screen2.png" alt="API overview with grouped endpoints" loading="lazy" width="1920" height="1080">
+        <img src="./assets/img/screen2.png" alt="API overview with grouped endpoints" loading="lazy" width="1920" height="1080">
       </div>
       <div class="hero__browser r d3">
         <div class="bbar"><span class="bdot bd-r"></span><span class="bdot bd-y"></span><span class="bdot bd-g"></span><span class="burl">POST /workspaces — Try It</span></div>
-        <img src="demo/img/screen1.png" alt="Endpoint detail with Try It console" loading="lazy" width="1920" height="1080">
+        <img src="./assets/img/screen1.png" alt="Endpoint detail with Try It console" loading="lazy" width="1920" height="1080">
       </div>
     </div>
   </div>
@@ -357,7 +357,7 @@
 
 <span class="ct">&lt;pure-docs</span> <span class="ca">spec-url</span>=<span class="cs">"/openapi.yaml"</span><span class="ct">&gt;&lt;/pure-docs&gt;</span>
 
-<span class="ct">&lt;script</span> <span class="ca">src</span>=<span class="cs">"/assets/puredocs.umd.cjs"</span><span class="ct">&gt;&lt;/script&gt;</span></pre></div>
+<span class="ct">&lt;script</span> <span class="ca">src</span>=<span class="cs">"/assets/puredocs.umd.js"</span><span class="ct">&gt;&lt;/script&gt;</span></pre></div>
           </div>
         </div>
       </div>
@@ -366,9 +366,6 @@
         <div style="font-size:13px;font-weight:600;color:var(--w);margin-bottom:12px">Full configuration</div>
         <div class="code code--full"><pre><span class="ct">&lt;pure-docs</span>
   <span class="ca">spec-url</span>=<span class="cs">"/openapi.json"</span>
-  <span class="ca">environments-array</span>=<span class="cs">'["https://api.dev.example.com",
-    "https://api.example.com"]'</span>
-  <span class="ca">default-environment</span>=<span class="cs">"api.dev.example.com"</span>
   <span class="ca">theme</span>=<span class="cs">"auto"</span>
   <span class="ca">primary-color</span>=<span class="cs">"#0ea5e9"</span>
   <span class="ca">title</span>=<span class="cs">"Example API"</span>
@@ -421,7 +418,7 @@ docs.<span class="cf">setEnvironment</span>(<span class="cs">'api.example.com'</
       <h2 class="sec__h r d1">Ready to elevate your API docs?</h2>
       <p class="sec__p r d2">Open source and free for non-commercial use.</p>
       <div class="cta__acts r d3">
-        <a href="https://www.npmjs.com/package/puredocs" target="_blank" rel="noopener" class="btn btn--p">Install from npm <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"/><polyline points="12 5 19 12 12 19"/></svg></a>
+        <a href="/demo/" class="btn btn--p">Try Interactive Demo <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"/><polyline points="12 5 19 12 12 19"/></svg></a>
         <a href="https://github.com/esurkov1/puredocs" target="_blank" rel="noopener" class="btn btn--g"><svg viewBox="0 0 16 16" fill="currentColor"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0016 8c0-4.42-3.58-8-8-8z"/></svg>Star on GitHub</a>
       </div>
     </div>
