--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -20,6 +20,9 @@
       color: #0f172a;
       display: flex;
       flex-direction: column;
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
     }
 
     .demo-topbar {
@@ -66,7 +69,7 @@
     <a class="demo-link" href="/">Back to Landing</a>
   </header>
 
-  <pure-docs spec-url="./sample-spec.json" theme="auto" title="PureDocs Showcase API"></pure-docs>
+  <pure-docs spec-url="/sample-spec.json" theme="auto" title="PureDocs Showcase API"></pure-docs>
 
   <script type="module">
     const isLocalDev = location.hostname === 'localhost' || location.hostname === '127.0.0.1';
