--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -25,71 +25,37 @@
       overflow: hidden;
     }
 
-    .demo-topbar {
-      position: sticky;
-      top: 0;
+    .demo-back-btn {
+      position: fixed;
+      top: 12px;
+      right: 12px;
       z-index: 100;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 16px;
-      padding: 12px 16px;
-      border-bottom: 1px solid #dbe3f1;
-      background: rgba(243, 246, 251, 0.92);
-      backdrop-filter: blur(8px);
-      -webkit-backdrop-filter: blur(8px);
-    }
-
-    .demo-title {
-      font-size: 14px;
-      font-weight: 600;
-      color: #1e293b;
-      margin: 0;
-    }
-
-    .demo-link {
-      font-size: 13px;
-      font-weight: 600;
+      font-size: 12px;
+      font-weight: 500;
       color: #2563eb;
       text-decoration: none;
-      padding: 8px 10px;
-      border-radius: 8px;
+      padding: 6px 10px;
+      border-radius: 6px;
       border: 1px solid #bfdbfe;
+      background: rgba(255, 255, 255, 0.9);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06);
+    }
+
+    .demo-back-btn:hover {
       background: #eff6ff;
     }
-
-    .demo-link:hover {
-      background: #dbeafe;
-    }
   </style>
+  <link rel="stylesheet" href="./assets/puredocs.css" />
 </head>
 <body>
-  <header class="demo-topbar">
-    <h1 class="demo-title">PureDocs Demo · Showcase API Spec</h1>
-    <a class="demo-link" href="/">Back to Landing</a>
-  </header>
-
+  <a class="demo-back-btn" href="/">← Back to Landing</a>
   <pure-docs spec-url="/sample-spec.json" theme="auto" title="PureDocs Showcase API"></pure-docs>
 
   <script type="module">
-    const isLocalDev = location.hostname === 'localhost' || location.hostname === '127.0.0.1';
-
-    if (isLocalDev) {
+    if (location.hostname === 'localhost' || location.hostname === '127.0.0.1') {
       await import('../../src/index.ts');
-    } else {
-      const css = document.createElement('link');
-      css.rel = 'stylesheet';
-      css.href = './assets/puredocs.css';
-      document.head.append(css);
-
-      await new Promise((resolve, reject) => {
-        const script = document.createElement('script');
-        script.src = './assets/puredocs.umd.js';
-        script.onload = resolve;
-        script.onerror = reject;
-        document.body.append(script);
-      });
     }
   </script>
+  <script src="./assets/puredocs.umd.js"></script>
 </body>
 </html>
