--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <a class="demo-back-btn" href="/">← Back to Landing</a>
-  <pure-docs spec-url="./sample-spec.json" theme="auto" title="PureDocs Showcase API"></pure-docs>
+  <pure-docs spec-url="./spec.json" theme="auto" title="PureDocs Showcase API"></pure-docs>
 
   <script type="module">
     if (location.hostname === 'localhost' || location.hostname === '127.0.0.1') {
